add: [hexagonal] 단위 Test Code 추가