@@ -3,18 +3,19 @@ package com.example.hexagonal.framework.adapter.out.persistence;
 import com.example.hexagonal.application.port.out.MacBookManagementOutPort;
 import com.example.hexagonal.common.PersistenceAdapter;
 import com.example.hexagonal.domain.entity.MacBook;
+import com.example.hexagonal.framework.adapter.out.persistence.data.MacBookFragment;
 import com.example.hexagonal.framework.adapter.out.persistence.entity.BatteryJpaEntity;
 import com.example.hexagonal.framework.adapter.out.persistence.mapper.BatteryJpaMapper;
 import com.example.hexagonal.framework.adapter.out.persistence.mapper.MacBookJpaMapper;
 import com.example.hexagonal.framework.adapter.out.persistence.repository.BatteryRepository;
 import com.example.hexagonal.framework.adapter.out.persistence.repository.MacBookRepository;
+import jakarta.persistence.PersistenceException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.log4j.Log4j2;
 import org.springframework.context.annotation.Primary;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Log4j2
 @Primary
@@ -44,6 +45,17 @@ public class MacBookAdapter implements MacBookManagementOutPort {
         return this.macBookRepository.findAllMacBook()
                 .stream()
                 .map(v -> MacBookJpaMapper.INSTANCE.fragmentToDomainEntity(v.macbookName(), v.chargeStatus()))
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    @Override
+    public Optional<MacBook> findById(String id) {
+        Optional<MacBookFragment> byIdMacBook = this.macBookRepository.findByIdMacBook(Long.parseLong(id));
+        if(byIdMacBook.isPresent()) {
+            return Optional.of(MacBookJpaMapper.INSTANCE.fragmentToDomainEntity(byIdMacBook.get().macbookName(), byIdMacBook.get().chargeStatus()));
+        }
+        else {
+            throw new PersistenceException("맥북을 찾을 수 없습니다.");
+        }
     }
 }
